<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_doctor"
        android:icon="@drawable/ic_telescope"
        android:title="@string/title_doctor" />

    <item
        android:id="@+id/navigation_appointment"
        android:icon="@drawable/ic_calender"
        android:title="@string/title_appointment" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_medicine_svgrepo_com"
        android:title="@string/title_shop" />

<!--    <item-->
<!--        android:id="@+id/navigation_cart"-->
<!--        android:icon="@drawable/ic_location_gray_dark"-->
<!--        android:title="@string/title_cart" />-->

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_user"
        android:title="@string/title_account" />

</menu>