<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_doctor_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_doctor_shop"
        android:icon="@drawable/ic_medicine_svgrepo_com"
        android:title="Products" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_patient"-->
    <!--        android:icon="@drawable/ic_notifications_black_24dp"-->
    <!--        android:title="Patients" />-->
    <item
        android:id="@+id/navigation_doctor_appointment"
        android:icon="@drawable/ic_calender"
        android:title="@string/title_appointment" />

    <item
        android:id="@+id/navigation_doctor_account"
        android:icon="@drawable/ic_user"
        android:title="@string/title_account" />
</menu>